Update Gradle configuration and migrate tests to JUnit 5